# kmeans-algorithms

./: README.md  cabal.project  kmeans-algorithms.cabal  makefile
app/: Plot.hs
src/AI/: Cluster.hs  Utility.hs
src/AI/Cluster/: Initialise.hs  LloydsAlgorithm.hs  Scoring.hs  Types.hs
