cabal-version:      2.2
category:           Random, Vector
build-type:         Simple

name:               kmeans-algorithms
synopsis:           Library for performing kmeans algorithms
version:            0.1.0

author:             Callan McGill
maintainer:         callan.mcgill@gmail.com
homepage:           https://github.com/Boarders/kmeans-algorithms
bug-reports:        https://github.com/Boarders/kmeans-algorithms/issues
copyright:          2019
license:            BSD-3-Clause
description:
    .
    TODO
    .
    @
    @

extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/Boarders/kmeans-algorithms


Library

  hs-source-dirs:   src

  ghc-options:      -Wall

  build-depends:    base            ^>= 4.12.0.0
                  , MonadRandom     >= 0.5.1.1  && < 0.6
                  , monad-primitive ^>= 0.1
                  , mtl             ^>= 2.2.2
                  , mwc-probability ^>= 2.0.4
                  , parallel        ^>= 3.2.2.0
                  , perfect-vector-shuffle >= 0.1.1
                  , primitive       >= 0.6.4.0  && < 0.7
                  , probability     ^>= 0.2.5.2
                  , random          ^>= 1.1
                  , vector          >= 0.12.0   && < 0.13
                  , vector-builder  ^>= 0.3.7.2

  exposed-modules:  AI.Cluster
                    AI.Cluster.Types
                    AI.Cluster.Initialise
                    AI.Cluster.LloydsAlgorithm
                    AI.Cluster.Scoring

  other-modules:

  default-language: Haskell2010


Test-Suite testsuite

  type:             exitcode-stdio-1.0

  main-is:          Test.hs

  hs-source-dirs:   test

  ghc-options:      -Wall
                    -Wincomplete-patterns

  build-depends:    kmeans-algorithms      ^>= 0.1.0
                  , base                   ^>= 4.12.0.0
                  , QuickCheck             ^>= 2.12.6.1
                  , random                 ^>= 1.1
                  , tasty                  >= 1.2    && < 1.3
                  , tasty-quickcheck       ^>= 0.10
                  , vector                 >= 0.12.0 && < 0.13
                  , quickcheck-instances   >= 0.3.19 && < 0.4


  other-modules:
                    KMeans.Test

  default-language: Haskell2010